[gd_scene format=3 uid="uid://bhtubvp72xrii"]

[ext_resource type="Script" uid="uid://c8gnkfeny44cs" path="res://Assets/Scripts/UI/Menus/SettingsUi.gd" id="1_1ii1u"]
[ext_resource type="FontFile" uid="uid://bt1h3mvmsd3o1" path="res://Assets/Fonts/ofont.ru_Gnocchi.ttf" id="2_lcmdv"]
[ext_resource type="Texture2D" uid="uid://c0wstkykacoaq" path="res://Assets/Sprites/UI/Menus/Pause/звук вкл.png" id="2_pcxia"]
[ext_resource type="Texture2D" uid="uid://batbb7jisf60y" path="res://Assets/Sprites/UI/Menus/Pause/ползунок.png" id="3_ik26v"]
[ext_resource type="Texture2D" uid="uid://cnoi8o1hex3np" path="res://Assets/Sprites/UI/Menus/Pause/стрелочка.png" id="5_68i8b"]
[ext_resource type="Texture2D" uid="uid://dh4q757x6ikpm" path="res://Assets/Sprites/UI/Buttons/MenuButton/меню_покой.png" id="7_fv6cf"]
[ext_resource type="Texture2D" uid="uid://c04mjfdh1u00p" path="res://Assets/Sprites/UI/Buttons/MenuButton/меню_нажата.png" id="8_ea1xn"]
[ext_resource type="Texture2D" uid="uid://cnocbo04bj5yx" path="res://Assets/Sprites/UI/Buttons/MenuButton/меню_наведение.png" id="9_165ny"]

[sub_resource type="PlaceholderTexture2D" id="PlaceholderTexture2D_1ii1u"]

[node name="SettingsUi" type="Control" unique_id=936939857 node_paths=PackedStringArray("master_slider", "sfx_slider", "music_slider", "master_volume_text", "sfx_volume_text", "music_volume_text", "current_window_mode_text", "current_resolution_mode_text", "apply_button", "restore_defaults_button")]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_1ii1u")
master_slider = NodePath("TabContainer/АУДИО/MarginContainer/VBoxContainer/MasterBoxContainer/MasterSlider")
sfx_slider = NodePath("TabContainer/АУДИО/MarginContainer/VBoxContainer/SFXBoxContainer2/SFXSlider")
music_slider = NodePath("TabContainer/АУДИО/MarginContainer/VBoxContainer/MusicBoxContainer3/MusicSlider")
master_volume_text = NodePath("TabContainer/АУДИО/MarginContainer/VBoxContainer/MasterBoxContainer/RichTextLabel2")
sfx_volume_text = NodePath("TabContainer/АУДИО/MarginContainer/VBoxContainer/SFXBoxContainer2/RichTextLabel2")
music_volume_text = NodePath("TabContainer/АУДИО/MarginContainer/VBoxContainer/MusicBoxContainer3/RichTextLabel2")
current_window_mode_text = NodePath("TabContainer/ЭКРАН/MarginContainer/VBoxContainer/WindowMode/CurrentMode")
current_resolution_mode_text = NodePath("TabContainer/ЭКРАН/MarginContainer/VBoxContainer/ResolutionMode/CurrentMode")
array_window_mode = Array[String](["ПОЛНЫЙ ЭКРАН", "В ОКНЕ"])
array_resolution_mode = Array[String](["1280 x 720", "1366 x 768", "1600 x 900", "1920 x 1080"])
apply_button = NodePath("ButtonsContainer/ApplySettings")
restore_defaults_button = NodePath("ButtonsContainer/RestoreDefaults")

[node name="TextureRect" type="TextureRect" parent="." unique_id=1997296712]
modulate = Color(0, 0, 0, 1)
self_modulate = Color(1, 1, 1, 0.333333)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("PlaceholderTexture2D_1ii1u")

[node name="TabContainer" type="TabContainer" parent="." unique_id=997780496]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.15
anchor_top = 0.1
anchor_right = 0.85
anchor_bottom = 0.7
theme_override_fonts/font = ExtResource("2_lcmdv")
tab_alignment = 1
current_tab = 0

[node name="АУДИО" type="TabBar" parent="TabContainer" unique_id=633709512]
layout_mode = 2
metadata/_tab_index = 0

[node name="MarginContainer" type="MarginContainer" parent="TabContainer/АУДИО" unique_id=2044657421]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 50

[node name="VBoxContainer" type="VBoxContainer" parent="TabContainer/АУДИО/MarginContainer" unique_id=308922741]
layout_mode = 2
theme_override_constants/separation = 25
alignment = 1

[node name="MasterBoxContainer" type="HBoxContainer" parent="TabContainer/АУДИО/MarginContainer/VBoxContainer" unique_id=1923220763]
layout_mode = 2
size_flags_vertical = 3
alignment = 1

[node name="RichTextLabel" type="RichTextLabel" parent="TabContainer/АУДИО/MarginContainer/VBoxContainer/MasterBoxContainer" unique_id=1887620471]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 2.0
theme_override_fonts/normal_font = ExtResource("2_lcmdv")
bbcode_enabled = true
text = "ОБЩАЯ ГРОМКОСТЬ"
horizontal_alignment = 1
vertical_alignment = 1

[node name="TextureRect" type="TextureButton" parent="TabContainer/АУДИО/MarginContainer/VBoxContainer/MasterBoxContainer" unique_id=300483491]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.75
action_mode = 0
texture_normal = ExtResource("2_pcxia")
ignore_texture_size = true
stretch_mode = 5

[node name="MasterSlider" type="HSlider" parent="TabContainer/АУДИО/MarginContainer/VBoxContainer/MasterBoxContainer" unique_id=1959922220]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
size_flags_stretch_ratio = 2.0
theme_override_icons/grabber = ExtResource("3_ik26v")
theme_override_icons/grabber_highlight = ExtResource("3_ik26v")
theme_override_icons/grabber_disabled = ExtResource("3_ik26v")
theme_override_icons/tick = ExtResource("3_ik26v")

[node name="RichTextLabel2" type="RichTextLabel" parent="TabContainer/АУДИО/MarginContainer/VBoxContainer/MasterBoxContainer" unique_id=2091199051]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.5
theme_override_fonts/normal_font = ExtResource("2_lcmdv")
bbcode_enabled = true
text = "0%"
horizontal_alignment = 1
vertical_alignment = 1

[node name="SFXBoxContainer2" type="HBoxContainer" parent="TabContainer/АУДИО/MarginContainer/VBoxContainer" unique_id=891567408]
layout_mode = 2
size_flags_vertical = 3
alignment = 1

[node name="RichTextLabel" type="RichTextLabel" parent="TabContainer/АУДИО/MarginContainer/VBoxContainer/SFXBoxContainer2" unique_id=1642612214]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 2.0
theme_override_fonts/normal_font = ExtResource("2_lcmdv")
bbcode_enabled = true
text = "ЗВУКОВЫЕ ЭФФЕКТЫ"
horizontal_alignment = 1
vertical_alignment = 1

[node name="TextureRect" type="TextureButton" parent="TabContainer/АУДИО/MarginContainer/VBoxContainer/SFXBoxContainer2" unique_id=1457808768]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.75
action_mode = 0
texture_normal = ExtResource("2_pcxia")
ignore_texture_size = true
stretch_mode = 5

[node name="SFXSlider" type="HSlider" parent="TabContainer/АУДИО/MarginContainer/VBoxContainer/SFXBoxContainer2" unique_id=1025399011]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
size_flags_stretch_ratio = 2.0
theme_override_icons/grabber = ExtResource("3_ik26v")
theme_override_icons/grabber_highlight = ExtResource("3_ik26v")
theme_override_icons/grabber_disabled = ExtResource("3_ik26v")
theme_override_icons/tick = ExtResource("3_ik26v")

[node name="RichTextLabel2" type="RichTextLabel" parent="TabContainer/АУДИО/MarginContainer/VBoxContainer/SFXBoxContainer2" unique_id=853589081]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.5
theme_override_fonts/normal_font = ExtResource("2_lcmdv")
bbcode_enabled = true
text = "0%"
horizontal_alignment = 1
vertical_alignment = 1

[node name="MusicBoxContainer3" type="HBoxContainer" parent="TabContainer/АУДИО/MarginContainer/VBoxContainer" unique_id=1993963311]
layout_mode = 2
size_flags_vertical = 3
alignment = 1

[node name="RichTextLabel" type="RichTextLabel" parent="TabContainer/АУДИО/MarginContainer/VBoxContainer/MusicBoxContainer3" unique_id=452025482]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 2.0
theme_override_fonts/normal_font = ExtResource("2_lcmdv")
bbcode_enabled = true
text = "ГРОМКОСТЬ МУЗЫКИ"
horizontal_alignment = 1
vertical_alignment = 1

[node name="TextureRect" type="TextureButton" parent="TabContainer/АУДИО/MarginContainer/VBoxContainer/MusicBoxContainer3" unique_id=59087237]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.75
action_mode = 0
texture_normal = ExtResource("2_pcxia")
ignore_texture_size = true
stretch_mode = 5

[node name="MusicSlider" type="HSlider" parent="TabContainer/АУДИО/MarginContainer/VBoxContainer/MusicBoxContainer3" unique_id=30322899]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
size_flags_stretch_ratio = 2.0
theme_override_icons/grabber = ExtResource("3_ik26v")
theme_override_icons/grabber_highlight = ExtResource("3_ik26v")
theme_override_icons/grabber_disabled = ExtResource("3_ik26v")
theme_override_icons/tick = ExtResource("3_ik26v")

[node name="RichTextLabel2" type="RichTextLabel" parent="TabContainer/АУДИО/MarginContainer/VBoxContainer/MusicBoxContainer3" unique_id=1390549602]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.5
theme_override_fonts/normal_font = ExtResource("2_lcmdv")
bbcode_enabled = true
text = "0%"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ЭКРАН" type="TabBar" parent="TabContainer" unique_id=1561599512]
visible = false
layout_mode = 2
metadata/_tab_index = 1

[node name="MarginContainer" type="MarginContainer" parent="TabContainer/ЭКРАН" unique_id=1950041689]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="TabContainer/ЭКРАН/MarginContainer" unique_id=1926839526]
layout_mode = 2
theme_override_constants/separation = 35
alignment = 1

[node name="WindowMode" type="HBoxContainer" parent="TabContainer/ЭКРАН/MarginContainer/VBoxContainer" unique_id=708274999]
layout_mode = 2
size_flags_vertical = 3
alignment = 1

[node name="RichTextLabel" type="RichTextLabel" parent="TabContainer/ЭКРАН/MarginContainer/VBoxContainer/WindowMode" unique_id=702313191]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 2.0
theme_override_fonts/normal_font = ExtResource("2_lcmdv")
bbcode_enabled = true
text = "РЕЖИМ ОКНА"
horizontal_alignment = 1
vertical_alignment = 1

[node name="LeftButton" type="TextureButton" parent="TabContainer/ЭКРАН/MarginContainer/VBoxContainer/WindowMode" unique_id=1877717900]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.5
action_mode = 0
texture_normal = ExtResource("5_68i8b")
ignore_texture_size = true
stretch_mode = 5
flip_h = true

[node name="CurrentMode" type="RichTextLabel" parent="TabContainer/ЭКРАН/MarginContainer/VBoxContainer/WindowMode" unique_id=1127043244]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 2.0
theme_override_fonts/normal_font = ExtResource("2_lcmdv")
bbcode_enabled = true
horizontal_alignment = 1
vertical_alignment = 1

[node name="RightButton" type="TextureButton" parent="TabContainer/ЭКРАН/MarginContainer/VBoxContainer/WindowMode" unique_id=950940856]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.5
action_mode = 0
texture_normal = ExtResource("5_68i8b")
ignore_texture_size = true
stretch_mode = 5

[node name="ResolutionMode" type="HBoxContainer" parent="TabContainer/ЭКРАН/MarginContainer/VBoxContainer" unique_id=1537110443]
layout_mode = 2
size_flags_vertical = 3
alignment = 1

[node name="RichTextLabel" type="RichTextLabel" parent="TabContainer/ЭКРАН/MarginContainer/VBoxContainer/ResolutionMode" unique_id=1987745322]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 2.0
theme_override_fonts/normal_font = ExtResource("2_lcmdv")
bbcode_enabled = true
text = "РАЗРЕШЕНИЕ ЭКРАНА"
horizontal_alignment = 1
vertical_alignment = 1

[node name="LeftButton" type="TextureButton" parent="TabContainer/ЭКРАН/MarginContainer/VBoxContainer/ResolutionMode" unique_id=1418954540]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.5
action_mode = 0
texture_normal = ExtResource("5_68i8b")
ignore_texture_size = true
stretch_mode = 5
flip_h = true

[node name="CurrentMode" type="RichTextLabel" parent="TabContainer/ЭКРАН/MarginContainer/VBoxContainer/ResolutionMode" unique_id=279884555]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 2.0
theme_override_fonts/normal_font = ExtResource("2_lcmdv")
bbcode_enabled = true
horizontal_alignment = 1
vertical_alignment = 1

[node name="RightButton" type="TextureButton" parent="TabContainer/ЭКРАН/MarginContainer/VBoxContainer/ResolutionMode" unique_id=1372334833]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.5
action_mode = 0
texture_normal = ExtResource("5_68i8b")
ignore_texture_size = true
stretch_mode = 5

[node name="ButtonsContainer" type="HBoxContainer" parent="." unique_id=1847004852]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.25
anchor_top = 0.65
anchor_right = 0.75
anchor_bottom = 0.775
offset_top = 28.8
offset_bottom = 28.8
theme_override_constants/separation = 25
alignment = 1

[node name="ApplySettings" type="TextureButton" parent="ButtonsContainer" unique_id=2109257851]
layout_mode = 2
size_flags_horizontal = 3
action_mode = 0
texture_normal = ExtResource("7_fv6cf")
texture_pressed = ExtResource("8_ea1xn")
texture_hover = ExtResource("9_165ny")
ignore_texture_size = true
stretch_mode = 5

[node name="RichTextLabel" type="RichTextLabel" parent="ButtonsContainer/ApplySettings" unique_id=658220479]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -86.5
offset_top = -25.5
offset_right = 86.5
offset_bottom = 25.5
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_fonts/normal_font = ExtResource("2_lcmdv")
bbcode_enabled = true
text = "Применить"
horizontal_alignment = 1
vertical_alignment = 1

[node name="RestoreDefaults" type="TextureButton" parent="ButtonsContainer" unique_id=1901869449]
layout_mode = 2
size_flags_horizontal = 3
action_mode = 0
texture_normal = ExtResource("7_fv6cf")
texture_pressed = ExtResource("8_ea1xn")
texture_hover = ExtResource("9_165ny")
ignore_texture_size = true
stretch_mode = 5

[node name="RichTextLabel" type="RichTextLabel" parent="ButtonsContainer/RestoreDefaults" unique_id=1537991756]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -87.5
offset_top = -27.0
offset_right = 87.5
offset_bottom = 27.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_fonts/normal_font = ExtResource("2_lcmdv")
bbcode_enabled = true
text = "По умолчанию"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Button" type="TextureButton" parent="." unique_id=863799313]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.4
anchor_top = 0.825
anchor_right = 0.6
anchor_bottom = 0.95
action_mode = 0
texture_normal = ExtResource("7_fv6cf")
texture_pressed = ExtResource("8_ea1xn")
texture_hover = ExtResource("9_165ny")
ignore_texture_size = true
stretch_mode = 5

[node name="RichTextLabel" type="RichTextLabel" parent="Button" unique_id=562901048]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -86.0
offset_top = -26.0
offset_right = 86.0
offset_bottom = 26.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_fonts/normal_font = ExtResource("2_lcmdv")
bbcode_enabled = true
text = "Выход"
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="value_changed" from="TabContainer/АУДИО/MarginContainer/VBoxContainer/MasterBoxContainer/MasterSlider" to="." method="on_value_text_update"]
[connection signal="value_changed" from="TabContainer/АУДИО/MarginContainer/VBoxContainer/SFXBoxContainer2/SFXSlider" to="." method="on_value_text_update"]
[connection signal="value_changed" from="TabContainer/АУДИО/MarginContainer/VBoxContainer/MusicBoxContainer3/MusicSlider" to="." method="on_value_text_update"]
[connection signal="pressed" from="TabContainer/ЭКРАН/MarginContainer/VBoxContainer/WindowMode/LeftButton" to="." method="on_decrease_window_mode"]
[connection signal="pressed" from="TabContainer/ЭКРАН/MarginContainer/VBoxContainer/WindowMode/RightButton" to="." method="on_increase_window_mode"]
[connection signal="pressed" from="TabContainer/ЭКРАН/MarginContainer/VBoxContainer/ResolutionMode/LeftButton" to="." method="on_decrease_resolution_mode"]
[connection signal="pressed" from="TabContainer/ЭКРАН/MarginContainer/VBoxContainer/ResolutionMode/RightButton" to="." method="on_increase_resolution_mode"]
[connection signal="pressed" from="ButtonsContainer/ApplySettings" to="." method="apply_and_save_settings"]
[connection signal="pressed" from="ButtonsContainer/RestoreDefaults" to="." method="restore_defaults"]
[connection signal="pressed" from="Button" to="." method="_on_close_button_pressed"]
